# mc-brpc

./: .clang-format  .gitignore  Dockerfile  README.md  brpc.cmake  global.cmake
base_libs/: server_config.h
base_libs/plugins/: codexx  codexx.cpp
base_libs/validator/: validator_util.h
base_libs/validator/proto/: validator.pb.h
brpc/: builtin_service.pb.h  errno.pb.h  get_favicon.pb.h  get_js.pb.h  idl_options.pb.cc  idl_options.pb.h  nshead_meta.pb.h  options.pb.h  proto_base.pb.h  rpc_dump.pb.h  rtmp.pb.h  span.pb.h  streaming_rpc_meta.pb.h  trackme.pb.h
brpc/brpc/: builtin_service.pb.cc  builtin_service.pb.h  builtin_service.proto  channel.cpp  channel.h  controller.cpp  controller.h  errno.pb.cc  errno.pb.h  get_favicon.pb.cc  get_favicon.pb.h  get_js.pb.cc  get_js.pb.h  nshead_meta.pb.cc  nshead_meta.pb.h  options.pb.cc  options.pb.h  parallel_channel.cpp  proto_base.pb.cc  proto_base.pb.h  rpc_dump.pb.cc  rpc_dump.pb.h  rtmp.pb.cc  rtmp.pb.h  server.cpp  server.h  span.h  span.pb.cc  span.pb.h  streaming_rpc_meta.pb.cc  streaming_rpc_meta.pb.h  trackme.pb.cc  trackme.pb.h
brpc/brpc/builtin/: metrics_service.cpp  metrics_service.h
brpc/brpc/details/: method_status.cpp  method_status.h  server_private_accessor.h
brpc/brpc/policy/: baidu_rpc_meta.pb.cc  baidu_rpc_meta.pb.h  baidu_rpc_meta.proto  baidu_rpc_protocol.cpp  base_lb_stat.h  http_rpc_protocol.cpp  hulu_pbrpc_meta.pb.cc  hulu_pbrpc_meta.pb.h  mongo.pb.cc  mongo.pb.h  public_pbrpc_meta.pb.cc  public_pbrpc_meta.pb.h  sofa_pbrpc_meta.pb.cc  sofa_pbrpc_meta.pb.h
brpc/bthread/: task_meta.h
brpc/butil/: logging.cc
brpc/butil/synchronization/: lock.h
brpc/bvar/: metrics_count_recorder.cpp  metrics_count_recorder.h  metrics_count_recorder_inl.h  metrics_latency_recorder.cpp  metrics_latency_recorder.h  reducer.h  variable.cpp  variable.h
brpc_test/: CMakeLists.txt  main.cpp
brpc_test/proto/: validator.proto
brpc_test/src/: service_impl.cpp
core/common/: channel_manager.cpp  channel_manager.h  common_callback.h  common_channel.cpp  common_channel.h  metrcis_helper.h  name_agent_client.cpp  name_agent_client.h
core/config/: server_config.cpp  server_config.h  server_config.pb.cc  server_config.pb.h
core/config/proto/: server_config.proto
core/extensions/: etcd_service_register.cpp  etcd_service_register.h  lb_stat.cpp  lb_stat.h  mc_naming_service.cpp  mc_naming_service.h  name_agent.pb.cc  name_agent.pb.h  service_register.h
core/lb_stat/: lb_stat_client.cpp  lb_stat_client.h  lb_strategy.cpp  lb_strategy.h  muti_level_hash.h  strategy_generator.cpp  strategy_shm.cpp  strategy_shm.h
core/log/: async_logsink.cpp  async_logsink.h  fast_logsink.cpp  fast_logsink.h  log_archive_worker.cpp  log_archive_worker.h  log_consts.h  log_lock.cpp  log_lock.h  log_rotate_watcher.cpp  log_rotate_watcher.h
core/mysql/: db_manager.cpp  db_manager.h  db_pool.cpp  db_pool.h  mysql_conn.cpp  mysql_conn.h
core/net/: net_utils.cpp  net_utils.h
core/plugins/: codexx  codexx.cpp
core/redis/: redis_manager.cpp  redis_manager.h  redis_wrapper.cpp  redis_wrapper.h
core/server/: MCServer.cpp  MCServer.h
core/utils/: json_util.h  net_utils.h  simple_timer_task.h  singleton.h
core/utils/net/: net_utils.cpp  net_utils.h
core/utils/validator/: validator_util.h
core/utils/validator/proto/: validator.pb.cc  validator.proto
services/brpc_name_agent/: CMakeLists.txt  main.cpp
services/brpc_name_agent/conf/: gflags.conf  lb_strategy_conf.json  server.conf
services/brpc_name_agent/proto/: agent_service.proto  name_agent.proto  validator.proto
services/brpc_name_agent/src/: agent_service_impl.cpp  agent_service_impl.h  lb_stat_server.cpp  lb_stat_server.h  naming_service_proxy.cpp  naming_service_proxy.h
services/brpc_test/: CMakeLists.txt  main.cpp
services/brpc_test/client/: agent_service.client.cpp  agent_service.client.h  name_agent.client.cpp  name_agent.client.h
services/brpc_test/conf/: gflags.conf  server.conf
services/brpc_test/proto/: test.proto  validator.proto
services/brpc_test/src/: service_impl.cpp  service_impl.h
